prometheus/alertmanager-sns-forwarder.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager-sns-forwarder
  namespace: prometheus
  labels:
    app: alertmanager-sns-forwarder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager-sns-forwarder
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: alertmanager-sns-forwarder
    spec:
      serviceAccountName: am-sns-forwarder
      restartPolicy: Always
      securityContext:
        fsGroup: 65534
      containers:
      - name: alertmanager-sns-forwarder
        image: datareply/alertmanager-sns-forwarder:latest
        imagePullPolicy: Always
        # You can also specify arguments
        args: ["--addr=:9087", "--debug", "--arn-prefix=arn:aws:sns:eu-west-2:407929326957:"]
        resources:
          limits:
            memory: 1Gi
            cpu: 0.5
          requests:
            cpu: 0.2
            memory: 0.5Gi
        ports:
          - containerPort: 9087
            name: webhook-port
        livenessProbe:
          httpGet:
            path: /health
            port: webhook-port
          initialDelaySeconds: 30
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: webhook-port
          initialDelaySeconds: 10
          timeoutSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-sns-forwarder-svc
  namespace: prometheus
  labels:
    app:  alertmanager-sns-forwarder
spec:
  ports:
    - port: 9087
      name: webhook-port
      targetPort: 9087
  selector:
      app: alertmanager-sns-forwarder
