prometheus/cb-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-ingress
  namespace: cb
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector: 
        matchLabels:
          app: prometheus
    ports:
    - port: 8080
      protocol: TCP
    - port: 3000
      protocol: TCP
