prometheus/prom-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: prometheus-and-grafana
  namespace: prometheus
spec:
  podSelector:
    matchLabels: 
      app.kubernetes.io/name: grafana
      app: kube-prometheus-stack-prometheus
  egress:
  - to:
    - ipBlock:
        cidr: 10.162.128.0/17
  ingress:
  - from:
    - ipBlock:
        cidr: 10.163.128.0/17
    ports:
    - protocol: TCP
      port: 9090
    - protocol: TCP
      port: 80
